--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
             </a>
             <div class="navbar-nav me-auto py-0">
                 <a href="#project" class="nav-item nav-link">Projectos</a>
-                <a href="#team" class="nav-item nav-link">Team</a>
                 <a href="#testimonial" class="nav-item nav-link">Testimonios</a>
                 <a href="#contact" class="nav-item nav-link">Contacto</a>
             </div>
@@ -141,14 +140,14 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="row g-3 mb-4">
                         <div class="col-sm-6">
-                            <img class="img-fluid rounded" src="img/about-1.jpg" alt="">
+                            <img class="img-fluid rounded" src="img/1-transformed.png" alt="">
                         </div>
                         <div class="col-sm-6">
-                            <img class="img-fluid rounded" src="img/about-2.jpg" alt="">
+                            <img class="img-fluid rounded" src="img/WhatsApp Image 2023-12-02 at 11.07.40 AM.jpeg" alt="">
                         </div>
                     </div>
                     <div class="d-flex align-items-center mb-3">
-                        <h5 class="border-end pe-3 me-3 mb-0">clientes satifechos </h5>
+                        <h5 class="border-end pe-3 me-3 mb-0">Satisfied customers </h5>
                         <h2 class="text-primary fw-bold mb-0" data-toggle="counter-up">3</h2>
                     </div>
                     <p class="mb-4">The satisfaction of my clients is grounded in my dedicated approach and continuous learning in the field of web development. Despite being in the early stages of my career, I stand out for my commitment to understanding the specific needs of each client. My meticulous approach and attention to detail are reflected in the creation of digital solutions that not only meet but exceed expectations.
@@ -351,7 +350,7 @@
                         </div>
                         <div class="ms-sm-4">
                             <h4 class="mb-3">Responsive Web Design</h4>
-                            <h6 class="mb-3">Starting from <span class="text-primary">$199</span></h6>
+                            <h6 class="mb-3">Starting from <span class="text-primary">$300 USD</span></h6>
                             <span>Create visually appealing and responsive websites that provide an optimal viewing experience across a wide range of devices and screen sizes.</span>
                         </div>
                     </div>
@@ -364,7 +363,7 @@
                         </div>
                         <div class="ms-sm-4">
                             <h4 class="mb-3">UI/UX Design</h4>
-                            <h6 class="mb-3">Starting from <span class="text-primary">$199</span></h6>
+                            <h6 class="mb-3">Starting from <span class="text-primary">$200 USD</span></h6>
                             <span>Create intuitive and visually appealing user interfaces with a focus on enhancing the overall user experience for your web applications.</span>
                         </div>
                     </div>
@@ -391,19 +390,19 @@
             <div class="row g-4 portfolio-container wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-4 col-md-6 portfolio-item first">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/project-1.jpg" alt="">
+                        <img class="img-fluid" src="img/1-transformed.png" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-1.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i class="fa fa-link"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/1-transformed.png" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://tutiendaalamano.com/"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 portfolio-item second">
                     <div class="portfolio-img rounded overflow-hidden">
-                        <img class="img-fluid" src="img/project-2.jpg" alt="">
+                        <img class="img-fluid" src="img/WhatsApp Image 2023-12-02 at 11.07.40 AM.jpeg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-2.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i class="fa fa-link"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/WhatsApp Image 2023-12-02 at 11.07.40 AM.jpeg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
+                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="https://opusindustry.com/"><i class="fa fa-link"></i></a>
                         </div>
                     </div>
                 </div>
@@ -444,28 +443,28 @@
             <div class="row justify-content-center">
                 <div class="col-lg-3 d-none d-lg-block">
                     <div class="testimonial-left h-100">
-                        <img class="img-fluid wow fadeIn" data-wow-delay="0.1s" src="img/testimonial-1.jpg" alt="">
-                        <img class="img-fluid wow fadeIn" data-wow-delay="0.3s" src="img/testimonial-2.jpg" alt="">
-                        <img class="img-fluid wow fadeIn" data-wow-delay="0.5s" src="img/testimonial-3.jpg" alt="">
+                        <img class="img-fluid wow fadeIn" data-wow-delay="0.1s" src="img/WhatsApp Image 2023-12-02 at 11.07.40 AM.jpeg" alt="">
+                        <img class="img-fluid wow fadeIn" data-wow-delay="0.3s" src="img/1-transformed.png" alt="">
+                        <img class="img-fluid wow fadeIn" data-wow-delay="0.5s" src="img/WhatsApp Image 2023-12-02 at 11.07.40 AM.jpeg" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="owl-carousel testimonial-carousel">
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-circle border border-secondary p-2 mx-auto" src="img/testimonial-1.jpg" alt="">
+                                <img class="img-fluid rounded-circle border border-secondary p-2 mx-auto" src="img/1-transformed.png" alt="">
                                 <div class="testimonial-icon">
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
                             </div>
-                            <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
+                            <p class="fs-5 fst-italic">We want to express our gratitude for the excellent work on our new website. The creativity and attention to detail are impressive, reflecting a deep understanding of our brand. The site is attractive and easy to navigate, providing our customers with a seamless experience. We appreciate the collaboration and professionalism of the team. We are confident that this website will strengthen our online presence. Thank you for your dedication and quality.</p>
                             <hr class="w-25 mx-auto">
-                            <h5>Client Name</h5>
-                            <span>Profession</span>
+                            <h5>Tu Tienda ala mano</h5>
+                            <span>ventas</span>
                         </div>
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-circle border border-secondary p-2 mx-auto" src="img/testimonial-2.jpg" alt="">
+                                <img class="img-fluid rounded-circle border border-secondary p-2 mx-auto" src="img/WhatsApp Image 2023-12-02 at 11.07.40 AM.jpeg" alt="">
                                 <div class="testimonial-icon">
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
@@ -475,25 +474,15 @@
                             <h5>Client Name</h5>
                             <span>Profession</span>
                         </div>
-                        <div class="testimonial-item text-center">
-                            <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-circle border border-secondary p-2 mx-auto" src="img/testimonial-3.jpg" alt="">
-                                <div class="testimonial-icon">
-                                    <i class="fa fa-quote-left text-primary"></i>
-                                </div>
-                            </div>
-                            <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
-                            <hr class="w-25 mx-auto">
-                            <h5>Client Name</h5>
-                            <span>Profession</span>
-                        </div>
+                       
+                          
                     </div>
                 </div>
                 <div class="col-lg-3 d-none d-lg-block">
                     <div class="testimonial-right h-100">
-                        <img class="img-fluid wow fadeIn" data-wow-delay="0.1s" src="img/testimonial-1.jpg" alt="">
-                        <img class="img-fluid wow fadeIn" data-wow-delay="0.3s" src="img/testimonial-2.jpg" alt="">
-                        <img class="img-fluid wow fadeIn" data-wow-delay="0.5s" src="img/testimonial-3.jpg" alt="">
+                        <img class="img-fluid wow fadeIn" data-wow-delay="0.1s" src="img/1-transformed.png" alt="">
+                        <img class="img-fluid wow fadeIn" data-wow-delay="0.3s" src="img/WhatsApp Image 2023-12-02 at 11.07.40 AM.jpeg" alt="">
+                        <img class="img-fluid wow fadeIn" data-wow-delay="0.5s" src="img/1-transformed.png" alt="">
                     </div>
                 </div>
             </div>
@@ -585,8 +574,8 @@
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a class="border-bottom text-secondary" href="https://htmlcodex.com">HTML Codex</a>
-                        <br>Distributed By: <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
+                        Designed By <a class="border-bottom text-secondary" href="https://htmlcodex.com">Miguel Angel Acosta</a>
+                        <br>Distributed By: <a class="border-bottom" href="https://themewagon.com" target="_blank">Miguel Acosta</a>
                     </div>
                 </div>
             </div>
