--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="#service" class="nav-item nav-link">Servicios</a>
             </div>
             <a href="index.html" class="navbar-brand bg-secondary py-3 px-4 mx-3 d-none d-lg-block">
-                <h1 class="text-primary fw-bold m-0">MIGUEL A.</h1>
+                <h1 class="text-primary fw-bold m-0">M.A</h1>
             </a>
             <div class="navbar-nav me-auto py-0">
                 <a href="#project" class="nav-item nav-link">Projectos</a>
