--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                         Mis Servicios</h1>
                 </div>
                 <div class="col-lg-6 text-lg-end">
-                    <a class="btn btn-primary py-3 px-5" href="https://web.whatsapp.com/">Contrátame</a>
+                    <a class="btn btn-primary py-3 px-5" href="https://bit.ly/fullstackdevelopermiguel">Contrátame</a>
                 </div>
             </div>
             <div class="row g-4">
