--- a/index.html
+++ b/index.html
@@ -424,8 +424,8 @@
                     <div class="portfolio-img rounded overflow-hidden">
                         <img class="img-fluid" src="img/project-4.jpg" alt="">
                         <div class="portfolio-btn">
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-4.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a>
-                            <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i class="fa fa-link"></i></a>
+                            <!-- <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href="img/project-4.jpg" data-lightbox="portfolio"><i class="fa fa-eye"></i></a> -->
+                            <!-- <a class="btn btn-lg-square btn-outline-secondary border-2 mx-1" href=""><i class="fa fa-link"></i></a> -->
                         </div>
                     </div>
                 </div>
@@ -525,7 +525,7 @@
                     <p class="mb-2">Envíame un correo:</p>
                     <h3 class="fw-bold">miguelangelortizacosta123@gmail.com</h3>
                     <hr class="w-100">
-                    <p class="mb-2">Sígueme:</p>
+                    <!-- <p class="mb-2">Sígueme:</p> -->
                     <div class="d-flex pt-2">
                         <!-- <a class="btn btn-square btn-primary me-2" href=""><i class="fab fa-twitter"></i></a> -->
                         
